# gomoku

./: .gitignore  CMakeLists.txt  ai.cpp  ai.h  board.cpp  board.h  game.cpp  game.h  gomoku  main.cpp
